src/test/deca/context/invalid/provided/OpArith.deca
// DESCRIPTION : Opération avec operands de différents types
// RESULTAT: Types supported bye arithmetic operations are float and int ! (3.33)
{
    float a;
    boolean b;
    println(a + b);
}
